<resources>
    <string name="app_name">Teacher Quotes</string>
    <string name="quote_text">Quote</string>
    <string name="help">Help</string>
    <string name="date_of_quote">Date</string>
    <string name="tap_to_set">Tap to set</string>
    <string name="action_done">Done</string>
    <string name="teacher_import_help">Enter your teachers that you may quote by entering them below.</string>
    <string name="teacher_import_hint">Enter teacher names on new lines</string>
    <string name="teacher_guidelines">Guidelines:\n- Last name only (e.g. Smith)\n- Exclude Mr./Mrs.\n- If multiple teachers share the same last name, include their first initial (RPorritt)</string>
    <string name="sort_alphabetically">Sort alphabetically on confirm</string>
    <string name="quote_guidelines">- Do not add quotation marks\n- End with proper punctuation</string>
    <string name="preview">Preview</string>
    <string name="share">Share</string>
    <string name="basic_quote">Basic Quote</string>
    <string name="quoting">Quoting</string>
    <string name="quote">Quote</string>
    <string name="bulk_quote">Bulk Quote</string>
    <string name="settings">Settings</string>
    <string name="teachers">Teachers</string>
</resources>
